SVN
-------------------------------

XML:   Resolved issue CASTOR-1938 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed NPE for extended types with <xs:any> members
       Details: http://jira.codehaus.org/browse/CASTOR-1938
       (Werner - 20070406)

XML:   Resolved issue CASTOR-1936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made XPathLocation implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-1936
       (Werner - 20070404)

XML:   Resolved issue CASTOR-1931 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with enum bindings for interger-based enumerations.
       Details: http://jira.codehaus.org/browse/CASTOR-1931
       (Werner - 20070403)

XML:   Resolved issue CASTOR-1928 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with not-specified binding file during automatic naming collision resolution.
       Details: http://jira.codehaus.org/browse/CASTOR-1928
       (Werner - 20070401)

XML:   Resolved issue CASTOR-238 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for 'overriding' the name of the Java 'content' member.
       Details: http://jira.codehaus.org/browse/CASTOR-238
       (Werner - 20070401)

XML:   Resolved issue CASTOR-423 using contribution from Johan Lindquist [johan@kawoo.co.uk]
       Added support for <xs:hexBinary>; for XML code generation and support for
       HEX en-/decoding during (un)marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-423
       (Werner - 20070401)

XML:   Resolved issue CASTOR-1926 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Renamed XMLClassDescriptorResolver.resolveXML(Class) back to resolve(Class).
       Details: http://jira.codehaus.org/browse/CASTOR-1926
       (Werner - 20070331)
